<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myschool.bsSupervisorUI.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_children_list"
        android:name="com.example.myschool.bsSupervisorUI.childrenList.ChildrenListFragment"
        android:label="@string/title_children_list"
        tools:layout="@layout/fragment_children_list" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.myschool.bsSupervisorUI.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />
</navigation>